fix: corrigindo overflow das tarefas

--- a/pages/crud-poo/index.css
+++ b/pages/crud-poo/index.css
@@ -130,7 +130,7 @@ body {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  overflow-y: auto;
+  overflow-y: hidden;
   scroll-behavior: smooth;
   padding: 1rem;
   max-height: 18.75rem;
@@ -356,8 +356,6 @@ body {
     padding: 0.3125rem 0.625rem;
   }
   .banner__notes-wrapper {
-    flex-direction: row;
-    overflow-y: initial;
-    overflow-x: auto;
+    padding: 0.5rem;
   }
 }
